// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityView should render a created entity view with view property 1`] = `
"import { User } from "../../domain/models";
import {  } from "./";

export class UserView {
  private constructor(user: User) {
    this.id = user.getId().value;
    this. = .get();
    this. = .create(.get());
  }

  public readonly id: string;

  public readonly name: string;
  public readonly email: EmailView;
}"
`;

exports[`EntityView should render a created entity view with view property value 1`] = `
"import { User } from "../../domain/models";
import {  } from "./";

export class UserView {
  private constructor(user: User) {
    this.id = user.getId().value;
    this. = .get();
    this. = .create(.get());
  }

  public readonly id: string;

  public readonly name: string;
  public readonly email: string;
}"
`;
